--- a/info.html
+++ b/info.html
@@ -20,7 +20,7 @@
         <ul>
             
             <li><a href="about.html">About</a></li>
-            <li><a href="book.html">Space Invaders</a></li>
+            <li><a href="index.html">Space Invaders</a></li>
             <li><a href="info.html">Info</a></li>
             <li><a href="comments.html">Comments</a></li>
         </ul>
