--- a/comments.html
+++ b/comments.html
@@ -19,7 +19,7 @@
         <h2>Retro Menu</h2>
         <ul>
             <li><a href="about.html">About</a></li>
-            <li><a href="book.html">Space Invaders</a></li>
+            <li><a href="index.html">Space Invaders</a></li>
             <li><a href="info.html">Info</a></li>
             <li><a href="comments.html">Comments</a></li>
         </ul>
