--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
     </footer>
 
     <!-- Loading Screen JS -->
-    <script src="/scripts/load.js"></script>
-    <script src="/scripts/toggle.js"></script>
+    <script src="load.js"></script>
+    <script src="toggle.js"></script>
 </body>
 </html>
