--- a/comments.html
+++ b/comments.html
@@ -53,8 +53,8 @@
         <p>&copy; 1980s Space Invaders Tribute</p>
     </footer>
 
-    <script src="/scripts/load.js"></script>
-    <script src="/scripts/comments.js"></script>
-    <script src="/scripts/toggle.js"></script>
+    <script src="load.js"></script>
+    <script src="comments.js"></script>
+    <script src="toggle.js"></script>
 </body>
 </html>
