--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </table>
     </div>
 </body>
-<script src="/scripts/load.js"></script>
-<script src="/scripts/script.js"></script>
-<script src="/scripts/toggle.js"></script>
+<script src="load.js"></script>
+<script src="script.js"></script>
+<script src="toggle.js"></script>
 </html>
