--- a/info.html
+++ b/info.html
@@ -62,6 +62,6 @@
     </footer>
 
 </body>
-<script src="/scripts/load.js"></script>
-<script src="/scripts/toggle.js"></script>
+<script src="load.js"></script>
+<script src="toggle.js"></script>
 </html>
